New .obj exporter: Material groups not being written #96470

Closed
opened 2022-03-14 21:57:06 +01:00 by Lazar Vukanović · 5 comments

System Information
Operating system: Linux-5.16.14-arch1-1-x86_64-with-glibc2.35 64 Bits
Graphics card: AMD Radeon RX 570 Series (POLARIS10, DRM 3.44.0, 5.16.14-arch1-1, LLVM 13.0.1) AMD 4.6 (Core Profile) Mesa 21.3.7

Blender Version
Broken: version: 3.1.0, branch: master, commit date: 2022-03-08 18:16, hash: c77597cd0e
Worked: "Blender v3.0.0 Release Candidate", written in the last file that exported correctly

Short description of error
Exporting to .obj with "Material Groups" checkbox filled does not write any material groups data into the resulting file.

Exact steps for others to reproduce the error
Assign a few materials to the default cube's material slots, export with "Material Groups" checked. The resulting file does not contain any material group data.

In the 3.0 obj exporter, material groups option was producing .obj file with lines like:

g Cube_Cube_Blue
usemtl Blue

but in the new exporter there's no g line corresponding to the material group.

**System Information** Operating system: Linux-5.16.14-arch1-1-x86_64-with-glibc2.35 64 Bits Graphics card: AMD Radeon RX 570 Series (POLARIS10, DRM 3.44.0, 5.16.14-arch1-1, LLVM 13.0.1) AMD 4.6 (Core Profile) Mesa 21.3.7 **Blender Version** Broken: version: 3.1.0, branch: master, commit date: 2022-03-08 18:16, hash: `c77597cd0e` Worked: "Blender v3.0.0 Release Candidate", written in the last file that exported correctly **Short description of error** Exporting to .obj with "Material Groups" checkbox filled does not write any material groups data into the resulting file. **Exact steps for others to reproduce the error** Assign a few materials to the default cube's material slots, export with "Material Groups" checked. The resulting file does not contain any material group data. In the 3.0 obj exporter, material groups option was producing .obj file with lines like: ``` g Cube_Cube_Blue usemtl Blue ``` but in the new exporter there's no `g` line corresponding to the material group.

Added subscriber: @Corvus262

Added subscriber: @Corvus262
Aras Pranckevicius self-assigned this 2022-03-15 13:24:26 +01:00

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Aras Pranckevicius changed title from Export .obj: Material groups not being written to New .obj exporter: Material groups not being written 2022-03-15 13:26:47 +01:00

This issue was referenced by 1781c6002a

This issue was referenced by 1781c6002ae935af9c611dc90e12a56faaa6ed68

This issue was referenced by b9123b806f

This issue was referenced by b9123b806fc4d17d684c0cc7057c0d3c7136d067
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#96470
No description provided.