source/blender/io/wavefront_obj/exporter/obj_export_file_writer.cc
@@ -174,34 +174,14 @@ void OBJWriter::write_mtllib_name(const StringRefNull mtl_filepath) const
   fh.write_to_file(outfile_);
 }
 
-void OBJWriter::write_object_group(FormatHandler<eFileType::OBJ> &fh,
-                                   const OBJMesh &obj_mesh_data) const
-{
-  /* "o object_name" is not mandatory. A valid .OBJ file may contain neither
-   * "o name" nor "g group_name". */
-  BLI_assert(export_params_.export_object_groups);
-  if (!export_params_.export_object_groups) {
-    return;
-  }
-  const std::string object_name = obj_mesh_data.get_object_name();
-  const char *object_mesh_name = obj_mesh_data.get_object_mesh_name();
-  const char *object_material_name = obj_mesh_data.get_object_material_name(0);
-  if (export_params_.export_materials && export_params_.export_material_groups &&
-      object_material_name) {
-    fh.write<eOBJSyntaxElement::object_group>(object_name + "_" + object_mesh_name + "_" +
-                                              object_material_name);
-  }
-  else {
-    fh.write<eOBJSyntaxElement::object_group>(object_name + "_" + object_mesh_name);
-  }
-}
-
 void OBJWriter::write_object_name(FormatHandler<eFileType::OBJ> &fh,
                                   const OBJMesh &obj_mesh_data) const
 {
   const char *object_name = obj_mesh_data.get_object_name();
   if (export_params_.export_object_groups) {
-    write_object_group(fh, obj_mesh_data);
+    const std::string object_name = obj_mesh_data.get_object_name();
+    const char *mesh_name = obj_mesh_data.get_object_mesh_name();
+    fh.write<eOBJSyntaxElement::object_group>(object_name + "_" + mesh_name);
     return;
   }
   fh.write<eOBJSyntaxElement::object_name>(object_name);
@@ -363,12 +343,13 @@ void OBJWriter::write_poly_elements(FormatHandler<eFileType::OBJ> &fh,
           buf.write<eOBJSyntaxElement::poly_usemtl>(MATERIAL_GROUP_DISABLED);
         }
         else {
-          if (export_params_.export_object_groups) {
-            write_object_group(buf, obj_mesh_data);
-          }
           const char *mat_name = matname_fn(mat);
           if (!mat_name) {
             mat_name = MATERIAL_GROUP_DISABLED;
+          }
+          if (export_params_.export_material_groups) {
+            const std::string object_name = obj_mesh_data.get_object_name();
+            fh.write<eOBJSyntaxElement::object_group>(object_name + "_" + mat_name);
           }
           buf.write<eOBJSyntaxElement::poly_usemtl>(mat_name);
         }
